GNOME Bugzilla – Bug 676742
Introspection fixes
Last modified: 2012-05-24 21:48:58 UTC
See patches.
Created attachment 214864 [details] [review] introspection: Emit all warnings
Created attachment 214865 [details] [review] introspection: Fix warnings
Created attachment 214866 [details] [review] introspection: Include SoupRequester API
Comment on attachment 214864 [details] [review] introspection: Emit all warnings so, my reason for not using --warn-all is that I don't like my builds to have spurious warnings, and originally there was no way to get rid of many of the warnings that the scanner emitted, even when they were wrong. I haven't tried again lately, but that would be a prereq for committing this.
Comment on attachment 214866 [details] [review] introspection: Include SoupRequester API This is too late for 3.4 and probably irrelevant for 3.6, but ok
mast# Bug 676742 - Introspection fixes - UNCONFIRMED Attachment 214865 [details] pushed as b6db9e3 - introspection: Fix warnings Attachment 214866 [details] pushed as 3ae3e64 - introspection: Include SoupRequester API