introspection: Fix warnings

https://bugzilla.gnome.org/show_bug.cgi?id=676742